Opened 14 years ago

Closed 13 years ago

#823 closed defect (fixed)

fix qt raw 1/2/4bpp with odd width

Reported by: ami_stuff Owned by:
Priority: normal Component: avcodec
Version: git-master Keywords: mov rawvideo
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

related:

https://ffmpeg.org/trac/ffmpeg/ticket/160

C:\>ffmpeg -i 1bpp.mov
ffmpeg version N-35966-g1d0ae92, Copyright (c) 2000-2011 the FFmpeg developers
  built on Dec 19 2011 13:01:15 with gcc 4.6.2
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-ru
ntime-cpudetect --enable-avisynth --enable-bzlib --enable-frei0r --enable-libope
ncore-amrnb --enable-libopencore-amrwb --enable-libfreetype --enable-libgsm --en
able-libmp3lame --enable-libopenjpeg --enable-librtmp --enable-libschroedinger -
-enable-libspeex --enable-libtheora --enable-libvo-aacenc --enable-libvo-amrwben
c --enable-libvorbis --enable-libvpx --enable-libx264 --enable-libxavs --enable-
libxvid --enable-zlib
  libavutil    51. 32. 0 / 51. 32. 0
  libavcodec   53. 46. 1 / 53. 46. 1
  libavformat  53. 27. 0 / 53. 27. 0
  libavdevice  53.  4. 0 / 53.  4. 0
  libavfilter   2. 53. 0 /  2. 53. 0
  libswscale    2.  1. 0 /  2.  1. 0
  libpostproc  51.  2. 0 / 51.  2. 0

Seems stream 0 codec frame rate differs from container frame rate: 600.00 (600/1
) -> 24.00 (24/1)
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from '1bpp.mov':
  Metadata:
    major_brand     : qt
    minor_version   : 537199360
    compatible_brands: qt
    creation_time   : 2011-12-23 17:18:37
  Duration: 00:00:05.95, start: 0.000000, bitrate: 299 kb/s
    Stream #0:0(eng): Video: rawvideo (raw  / 0x20776172), monow, 113x97, 297 kb
/s, 24 fps, 24 tbr, 600 tbn, 600 tbc
    Metadata:
      creation_time   : 2011-12-23 17:18:37
      handler_name    : &Procedura obs│ugi skrˇtˇw danych Apple
At least one output file must be specified

Attachments (7)

1bpp.mov (217.6 KB ) - added by ami_stuff 14 years ago.
2bpp.mov (434.4 KB ) - added by ami_stuff 14 years ago.
4bpp.mov (813.7 KB ) - added by ami_stuff 14 years ago.
1bpp_129.mov (271.8 KB ) - added by ami_stuff 14 years ago.
2bpp_129.mov (488.6 KB ) - added by ami_stuff 14 years ago.
4bpp_129.mov (922.1 KB ) - added by ami_stuff 14 years ago.
8bpp_129.mov (1.7 MB ) - added by ami_stuff 14 years ago.

Change History (13)

by ami_stuff, 14 years ago

Attachment: 1bpp.mov added

by ami_stuff, 14 years ago

Attachment: 2bpp.mov added

by ami_stuff, 14 years ago

Attachment: 4bpp.mov added

comment:1 by Carl Eugen Hoyos, 14 years ago

Component: undeterminedavcodec
Keywords: mov rawvideo added
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

Could you add samples that have a width of 129 pixel?

by ami_stuff, 14 years ago

Attachment: 1bpp_129.mov added

by ami_stuff, 14 years ago

Attachment: 2bpp_129.mov added

by ami_stuff, 14 years ago

Attachment: 4bpp_129.mov added

by ami_stuff, 14 years ago

Attachment: 8bpp_129.mov added

comment:2 by ami_stuff, 14 years ago

Attached.

comment:4 by Carl Eugen Hoyos, 14 years ago

Resolution: fixed
Status: openclosed

comment:5 by ami_stuff, 13 years ago

Resolution: fixed
Status: closedreopened

2 and 4bpp doesn't decode correctly with the current git head

comment:6 by Carl Eugen Hoyos, 13 years ago

Resolution: fixed
Status: reopenedclosed

I opened ticket #2536 for the regression.

Note: See TracTickets for help on using tickets.