Fix linesize for rawvideo in mov.

Fixes ticket #823.